# pydata-talk-2022

./: LICENSE  README.md  pyproject.toml
code/: collections-examples.ipynb  datetime-examples.ipynb  functools-examples.ipynb  heapq-examples.ipynb  heapq_tools.py  itertools-examples.ipynb  more-of-the-standard-library.ipynb  pathlib-examples.ipynb  tic_tac_toe.py
